# Reprompt-

./: .gitignore  Makefile  PRD.md  README.md  Unsolicited rec  render.yaml
api/: Competitive intelligence  pyproject.toml  requirements.txt
api/reprompt/: config.py  main.py  models.py
api/reprompt/data/: classifier.pkl  co_citation_map.json  ground_truth.db  strategies.json
api/reprompt/data/baskets/: electronics.jsonl  health.jsonl  home.jsonl  productivity.jsonl  sleep.jsonl
api/reprompt/routes/: baskets.py  rewrite.py  strategies.py  validate.py
api/reprompt/services/: basket_runner.py  citation_cluster.py  classifier.py  lexical.py  rewriter.py  scorer.py  shopping_proxy.py  specificity.py  structural.py  turn1_fitness.py  validator.py
api/tests/: conftest.py  test_citation_cluster.py  test_scorer.py  test_turn1_fitness.py
web/: .env.example  package-lock.json  package.json  tsconfig.tsbuildinfo
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/baskets/: page.tsx
web/src/app/batch/: page.tsx
web/src/app/co-citation/: page.tsx
web/src/app/competitive/: page.tsx
web/src/app/reverse-engineer/: page.tsx
web/src/app/social/: page.tsx
web/src/app/unsolicited/: page.tsx
web/src/app/validate/: page.tsx
web/src/components/: BasketPicker.tsx  BasketResults.tsx  BatchUpload.tsx  CategoryTags.tsx  ClusterTag.tsx  Nav.tsx  QueryInput.tsx  RewriteCard.tsx  RewriteResults.tsx  ScoreComparison.tsx  ScoreRing.tsx  StrategyBadge.tsx  Turn1Badge.tsx
web/src/lib/: api.ts  baskets.ts  rewriter.ts  strategies.ts
web/src/types/: reprompt.ts
(+20 files in other folders)
